test/types/sync/lydia/defaultValArg.good
defaultValArg.chpl:1: error: cannot define a default value for a sync/single argument
